Fixed the CreateTaskPanel stretching.

--- a/frontend/styles/CreateTaskPanel.less
+++ b/frontend/styles/CreateTaskPanel.less
@@ -1,5 +1,6 @@
 // General CreateTaskPanel styles.
 .CreateTaskPanel {
+  align-self: flex-start;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 0px 0px 30px 0px rgb(204, 204, 204);
